# demo-shared-lib-colliding

./: .gitignore  build_and_run.sh
hello_lib1/: CMakeLists.txt  hello1.cpp
hello_lib1/include/: hello1.h
hello_lib2/: CMakeLists.txt  hello2.cpp
hello_lib2/include/: hello2.h
main/: CMakeLists.txt  main.cpp
